<resources>
    <string name="app_name">Quick Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz">Quiz</string>
    <string name="quick_quiz">Quick Quiz</string>
    <string name="quiz_description">Quiz description</string>
    <string name="difficulty_level">Difficulty</string>
    <string name="view_quiz">View Quiz</string>
    <string name="total_question">Total Question</string>
    <string name="last_score">Last Score</string>
    <string name="na">NA</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="loading_quiz">Loading Quiz..</string>
    <string name="option_button">Option Button</string>
    <string name="verifying_answer">Verifying Answer..</string>
    <string name="next_question">Next Question</string>
    <string name="result">Result</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="questions_missed">Questions Missed</string>
    <string name="go_to_home">Go To Home</string>
    <string name="wrong_answer_feedback">Wrong Answer</string>
    <string name="corerct_ans_feedback">Correct Answer</string>

    <string name="banner_ad_key">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_key">ca-app-pub-3940256099942544/1033173712</string>
</resources>