<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FragDetails">


    <ImageView
        android:id="@+id/img_quiz_poster"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/quiz"
        android:textColor="@color/text_color"
        android:textSize="@dimen/very_very_big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_quiz_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/quiz_description"
        android:textColor="@color/text_color"
        android:textSize="@dimen/big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_quiz_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/txt_diff"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/difficulty_level"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_quiz_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/txt_diff_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/na"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_quiz_poster"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/txt_diff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894" />

    <TextView
        android:id="@+id/txt_total_question"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/total_question"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_diff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_total_question_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/na"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_diff"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toEndOf="@+id/txt_total_question" />

    <TextView
        android:id="@+id/txt_last_score"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/last_score"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_last_score_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/na"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_question"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txt_last_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892" />

    <Button
        android:id="@+id/btn_start_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start_quiz"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/btn_details_outline"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>