<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragment.FragResult">

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/result"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/very_very_big_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.498" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/proBarResult"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:indeterminate="true"
        app:cpb_progressbar_color="@color/purple_200"
        app:cpb_progress="75"
        app:cpb_background_progressbar_color="@color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498" />

    <TextView
        android:id="@+id/txtPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100%"
        android:textColor="@color/white"
        android:textSize="@dimen/big_text"
        app:layout_constraintStart_toStartOf="@+id/proBarResult"
        app:layout_constraintEnd_toEndOf="@+id/proBarResult"
        app:layout_constraintTop_toTopOf="@+id/proBarResult"
        app:layout_constraintBottom_toBottomOf="@+id/proBarResult" />

    <TextView
        android:id="@+id/txt_correct_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/correct_answer"
        android:textColor="@color/text_gray"
        app:layout_constraintTop_toBottomOf="@+id/proBarResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162" />

    <TextView
        android:id="@+id/txtCorrectAnsVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/na"
        android:textColor="@color/text_gray"
        app:layout_constraintTop_toBottomOf="@+id/proBarResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toEndOf="@+id/txt_correct_answer" />

    <TextView
        android:id="@+id/txt_wrong_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/wrong_answer"
        android:textColor="@color/text_gray"
        app:layout_constraintTop_toBottomOf="@+id/txt_correct_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159" />

    <TextView
        android:id="@+id/txtWrongAnswerVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/na"
        android:textColor="@color/text_gray"
        app:layout_constraintTop_toBottomOf="@+id/txt_correct_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toEndOf="@+id/txt_wrong_answer" />

    <TextView
        android:id="@+id/txt_question_missed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/questions_missed"
        android:textColor="@color/text_gray"
        app:layout_constraintTop_toBottomOf="@+id/txt_wrong_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159" />

    <TextView
        android:id="@+id/txtQuestionMissedVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/na"
        android:textColor="@color/text_gray"
        app:layout_constraintTop_toBottomOf="@+id/txt_wrong_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931" />

    <Button
        android:id="@+id/btnGoHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/btn_details_outline"
        android:text="@string/go_to_home"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_question_missed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.864" />

</androidx.constraintlayout.widget.ConstraintLayout>